Changing NavBar component to fix spacing

--- a/src/app/layout/components/navBar/NavBar.css
+++ b/src/app/layout/components/navBar/NavBar.css
@@ -1,5 +1,4 @@
-.container{
-  display: flex;
+.container {
 }
 
 .col-navbar{
